chore: 构建基本项目模块，添加基本依赖

--- a/mall-api/pom.xml
+++ b/mall-api/pom.xml
@@ -11,10 +11,20 @@
     </parent>
 
     <artifactId>mall-api</artifactId>
+    <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.3.2</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
 </project>
