--- a/mall-service/pom.xml
+++ b/mall-service/pom.xml
@@ -5,16 +5,31 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>mall-shopping</artifactId>
         <groupId>io.universe.mall</groupId>
+        <artifactId>mall-shopping</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>mall-service</artifactId>
+    <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>io.universe.mall</groupId>
+            <artifactId>mall-service-depenency</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.universe.mall</groupId>
+            <artifactId>mall-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
