--- a/mall-util/mall-common/pom.xml
+++ b/mall-util/mall-common/pom.xml
@@ -6,12 +6,11 @@
 
     <parent>
         <groupId>io.universe.mall</groupId>
-        <artifactId>mall-shopping</artifactId>
+        <artifactId>mall-util</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>mall-gateway</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>mall-common</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
