--- a/mall-util/pom.xml
+++ b/mall-util/pom.xml
@@ -5,12 +5,18 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>mall-shopping</artifactId>
         <groupId>io.universe.mall</groupId>
+        <artifactId>mall-shopping</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>mall-util</artifactId>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>mall-service-depenency</module>
+        <module>mall-common</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
