--- a/mall-web/pom.xml
+++ b/mall-web/pom.xml
@@ -5,12 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>mall-shopping</artifactId>
         <groupId>io.universe.mall</groupId>
+        <artifactId>mall-shopping</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>mall-web</artifactId>
+    <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
