fix: 修改mall-common，添加了默认Entity

--- a/mall-util/mall-common/pom.xml
+++ b/mall-util/mall-common/pom.xml
@@ -12,6 +12,14 @@
 
     <artifactId>mall-common</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-annotation</artifactId>
+            <version>3.3.2</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
