--- a/mall-api/pom.xml
+++ b/mall-api/pom.xml
@@ -3,6 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <modules>
+        <module>mall-goods-api</module>
+    </modules>
 
     <parent>
         <groupId>io.universe.mall</groupId>
@@ -18,12 +21,20 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>io.universe.mall</groupId>
+                <artifactId>mall-goods-api</artifactId>
+                <version>${mall.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>3.3.2</version>
-            <scope>provided</scope>
+            <groupId>io.universe.mall</groupId>
+            <artifactId>mall-common</artifactId>
         </dependency>
     </dependencies>
 
