--- a/mall-service/mall-goods-service/pom.xml
+++ b/mall-service/mall-goods-service/pom.xml
@@ -3,18 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <modules>
-        <module>mall-goods-service</module>
-    </modules>
 
     <parent>
         <groupId>io.universe.mall</groupId>
-        <artifactId>mall-shopping</artifactId>
+        <artifactId>mall-service</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>mall-service</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>mall-goods-service</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -24,12 +20,7 @@
     <dependencies>
         <dependency>
             <groupId>io.universe.mall</groupId>
-            <artifactId>mall-service-depenency</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>io.universe.mall</groupId>
-            <artifactId>mall-common</artifactId>
+            <artifactId>mall-goods-api</artifactId>
         </dependency>
     </dependencies>
 
