--- a/mall-util/mall-service-depenency/pom.xml
+++ b/mall-util/mall-service-depenency/pom.xml
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>3.3.2</version>
+            <version>${mybatis-plus-boot-starter.version}</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
