--- a/pom.xml
+++ b/pom.xml
@@ -21,13 +21,15 @@
         <module>mall-service</module>
         <module>mall-util</module>
         <module>mall-web</module>
-        <module>mall-good-api</module>
-        <module>mall-goods-service</module>
     </modules>
 
     <properties>
+        <mall.version>1.0-SNAPSHOT</mall.version>
         <java.version>1.8</java.version>
         <spring-cloud-alibaba.version>2.2.1.RELEASE</spring-cloud-alibaba.version>
+
+        <mybatis-plus.version>3.3.2</mybatis-plus.version>
+        <mybatis-plus-boot-starter.version>3.3.2</mybatis-plus-boot-starter.version>
     </properties>
 
     <dependencyManagement>
@@ -39,6 +41,29 @@
                 <version>${spring-cloud-alibaba.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>io.universe.mall</groupId>
+                <artifactId>mall-api</artifactId>
+                <version>${mall.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.universe.mall</groupId>
+                <artifactId>mall-service</artifactId>
+                <version>${mall.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.universe.mall</groupId>
+                <artifactId>mall-gateway</artifactId>
+                <version>${mall.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.universe.mall</groupId>
+                <artifactId>mall-util</artifactId>
+                <version>${mall.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
